# melbi

./: .gitignore  .gitmodules  Cargo.toml  EXTENSIONS_ANALYSIS.md  EXTENSIONS_SUMMARY.md  EXTENSIONS_TECHNICAL_GUIDE.md  QUICK_REFERENCE.txt
.claude/: CLAUDE.md
.github/: copilot-instructions.md
.github/instructions/: fmt.instructions.md
.topiary/: languages.ncl
cli/: Cargo.toml
cli/src/: highlighter.rs  lexer.rs  lib.rs  main.rs
cli/tests/: highlight_test.rs  lexer_test.rs
core/: Cargo.toml
core/benches/: evaluator.rs  function_dispatch.rs  function_dispatch_simple.rs  teeny_vec.rs  type_manager.rs
core/src/: casting.rs  errors.rs  lib.rs  scope_stack.rs  teeny_vec.rs
core/src/analyzer/: analyzer.rs  analyzer_test.rs  error.rs  mod.rs  typed_expr.rs
core/src/api/: engine.rs  environment.rs  error.rs  expression.rs  mod.rs  options.rs
core/src/compiler/: bytecode.rs  bytecode_compiler.rs  bytecode_test.rs  error.rs  mod.rs  tests.rs
core/src/diagnostics/: context.rs  mod.rs
core/src/evaluator/: error.rs  eval.rs  eval_test.rs  mod.rs  operators.rs
core/src/parser/: error.rs  expression.pest  mod.rs  parse_test.rs  parsed_expr.rs  parser.rs  precedence_test.rs  rule_valid_test.rs  syntax.rs
core/src/stdlib/: array.rs  array_test.rs  int.rs  int_test.rs  math.rs  math_test.rs  mod.rs  string.rs  string_test.rs
core/src/syntax/: bytes_literal.rs  mod.rs  string_literal.rs
core/src/types/: alpha_converter.rs  constraint_set.rs  effects.rs  encoding.rs  from_parser.rs  manager.rs  manager_test.rs  mod.rs  registry.rs  serialization.rs  traits.rs  type_class.rs  type_class_resolver.rs  type_scheme.rs  type_traits.rs  types.rs  unification.rs
core/src/values/: bytecode_lambda.rs  display_test.rs  dynamic.rs  dynamic_test.rs  from_raw.rs  function.rs  function_test.rs  lambda.rs  mod.rs  raw.rs  raw_test.rs  typed.rs  value.rs  value_test.rs
core/src/visitor/: mod.rs  tests.rs
core/src/vm/: README.md  array_contains_adapter.rs  cast_adapter.rs  code.rs  format_str_adapter.rs  function_adapter.rs  generic_adapter.rs  instruction_set.rs  mod.rs  runtime.rs  stack.rs  vm_architecture.md
core/tests/: postcard.rs  public_api.rs  stack_overflow.rs  tree_visitor.rs
crates/melbi-lsp/: Cargo.toml
crates/melbi-lsp/src/: helpers.rs  main.rs
crates/rhizome-cli/: Cargo.toml
crates/rhizome-lsp/: Cargo.toml
crates/rhizome-lsp/src/: helpers.rs  main.rs
docs/: CONTRIBUTING.md  TODO.projects.md  TODO.tasks.md  logging.md  melbi-lang-cheat-sheet.md  mvp-roadmap.md  pattern-matching-plan.md
docs/design/: effects.md  error-handling.md  formal-verification.md  metadata-directives.md  numeric-safety.md  polymorphic-lambda-type-resolution.md  profiling-coverage-observability.md  public-api.md  standard-library.md  type-encoding.md  unit-testing.md  units-of-measurement.md
docs/templates/: technical-design-doc.md
docs/typst/: melbi-lang-cheat-sheet.typ  melbi.sublime-syntax
fmt/: Cargo.toml
fmt/src/: lib.rs  main.rs
lsp/: Cargo.toml  DOCUMENTATION_COMMENTS.md
lsp/src/: document.rs  helpers.rs  lib.rs  main.rs  semantic_tokens.rs
lsp/tests/: completion.rs  diagnostics.rs  formatting.rs  hover.rs  semantic_tokens.rs
macros/: Cargo.toml
macros/src/: lib.rs  melbi_fn.rs
macros/tests/: melbi_fn_test.rs
melbi_macros/: Cargo.toml
melbi_macros/src/: melbi_fn.rs
parser/: Cargo.toml
parser/src/: arena_builder_test.rs  heap_builder_test.rs  impls.rs  lib.rs  main.rs  traits.rs
playground/: .gitignore  README.md  build.sh  package-lock.json  package.json  vite.config.js
playground/scripts/: build-tutorials.js  build.sh
playground/src/: embed.html  index.html  main.js  monaco-bootstrap.js  tutorial.html  tutorial.js  utils.js
playground/src/styles/: base.css  chrome.css  tutorial.css
playground/src/tutorials/: 01-hello-melbi.md  02-functions.md  03-let-bindings.md  04-type-classes.md  05-collections.md
playground/tests/: utils.test.js
playground/web/: .gitignore  index.html  main.js  package-lock.json  package.json  vite.config.js
playground/web/scripts/: build-tutorials.js
playground/web/src/: melbi-playground-utils.js
playground/web/styles/: tutorial.css
playground/web/tests/: melbi-playground-utils.test.js
playground/worker/: Cargo.toml
playground/worker/src/: lib.rs
scripts/: dependencies.sh  functions.sh  update-branch.sh
src/: error_renderer.rs  lib.rs
src/analyzer/: mod.rs
src/ast/: ast.rs
src/parser/: ast.rs  expression.pest  literals_test.rs  mod.rs  parse_comment_test.rs  parse_test.rs  parsed_expr.rs  parser.rs  precedence_test.rs  rule_valid_test.rs  syntax.rs
src/types/: manager.rs  manager_test.rs  mod.rs
tests/: arrays.rs  binary.rs  booleans.rs  comments.rs  comparisons.rs  floats.rs  if_expressions.rs  integers.rs  lambdas.rs  maps.rs  operators.rs  parser_test.rs  records.rs  redundant_parentheses.rs  strings.rs  type_errors.rs  where.rs
tests/cases/: mod.rs
topiary-queries/queries/: melbi.scm
tree-sitter/: grammar.js
types/: Cargo.toml
types/examples/: basic.rs  children_iterator.rs  closure_counter.rs  int_counter.rs  zip_equality.rs
types/src/: arena_builder.rs  box_builder.rs  ir.rs  lib.rs
types/src/ir/: builder.rs  display.rs  fold.rs  scalar.rs  ty.rs  view.rs  visit.rs  zip.rs
types/tests/: cross_builder.rs  integration.rs
values/: Cargo.toml
values/src/: impls.rs  lib.rs  raw.rs  ty.rs
values/src/dynamic/: mod.rs  value_view.rs
values/src/traits/: builder.rs  mod.rs
values/src/typed/: array_view.rs  mod.rs
values/tests/: heap_builder.rs
vscode/: .vscodeignore  README.md  package-lock.json  package.json  tsconfig.json
vscode/snippets/: melbi.json
vscode/src/: extension.ts
vscode/syntaxes/: melbi.tmLanguage.json  rhizome.tmLanguage.json
vscode/tests/: format_string.melbi  format_string.rz  incomplete_if.melbi  incomplete_if.rz  lambda.🖖  nested_format_string.mb  nestes_format_string.rz  plus.🖖  record.melbi  record.rz
zed/: Cargo.toml  README.md  extension.toml
zed/languages/melbi/: config.toml  highlights.scm  outline.scm  (+1 more)
zed/src/: lib.rs
(+2 files in other folders)
