[workspace]
members = [
    "core",
    "lsp",
    "cli",
    "zed",
    "fmt",
]

[workspace.package]
version = "0.1.0"
edition = "2024"
authors = ["Nilton Volpato <nilton@volpa.to>"]
license = "MIT OR Apache-2.0"
publish = false

[workspace.dependencies]
melbi-core = { path = "core" }
melbi-lsp = { path = "lsp" }
melbi-cli = { path = "cli" }
melbi-zed = { path = "zed" }

allocator-api2 = "0.2.21"  # Match bumpalo and hashbrown
bumpalo = { version = "3.19.0", features = ["allocator-api2"] }
hashbrown = "0.16.0"
lazy_static = "1.4"
once_cell = "1.21.3"
pest = "^2.8.0"
pest_derive = "^2.8.0"
pest_generator = "^2.7"
pretty_assertions = "1.4"
tokio = { version = "1.47.1", features = ["full"] }

[package]
name = "melbi"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
melbi-core.workspace = true
bumpalo.workspace = true

[dev-dependencies]
pretty_assertions.workspace = true
once_cell.workspace = true

[lib]
proc-macro = false

[features]
default = []
