[workspace]
members = [
    "core",
    "lsp",
    "cli",
    "fmt",
    "zed",
]

[workspace.package]
version = "0.1.0"
edition = "2024"
authors = ["Nilton Volpato <nilton@volpa.to>"]
license = "MIT OR Apache-2.0"

[workspace.dependencies]
melbi-core = { version = "0.1.0" }
melbi-lsp = { version = "0.1.0" }
melbi-cli = { version = "0.1.0" }
melbi-fmt = { version = "0.1.0" }

allocator-api2 = "0.2.21"  # Match bumpalo and hashbrown
bumpalo = { version = "3.19.0", features = ["allocator-api2"] }
hashbrown = "0.16.0"
lazy_static = "1.4"
once_cell = "1.21.3"
pest = "^2.8.0"
pest_derive = "^2.8.0"
pest_generator = "^2.7"
pretty_assertions = "1.4"
tokio = { version = "1.47.1", features = ["full"] }

[package]
name = "melbi"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
melbi-core.workspace = true
melbi-fmt = { workspace = true, optional = true }
bumpalo.workspace = true

[dev-dependencies]
pretty_assertions.workspace = true
once_cell.workspace = true
indoc = "2"

[lib]
proc-macro = false

[features]
default = ["fmt"]
fmt = ["dep:melbi-fmt"]

[patch.crates-io]
melbi-core = { path = "core" }
melbi-lsp = { path = "lsp" }
melbi-cli = { path = "cli" }
melbi-fmt = { path = "fmt" }
