[package]
name = "melbi-core"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[features]
default = []
std = ["snafu/std"]

[dependencies]
allocator-api2.workspace = true
bumpalo.workspace = true
hashbrown.workspace = true
lazy_static.workspace = true
pest.workspace = true
pest_derive.workspace = true
static_assertions = "1.1.0"
snafu = { version = "0.8.9", default-features = false, features = ["alloc", "rust_1_81"] }

[build-dependencies]
pest_generator.workspace = true

[dev-dependencies]
once_cell.workspace = true
pretty_assertions.workspace = true

[lib]
proc-macro = false
