[package]
name = "melbi-core"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[features]
default = []
std = []
experimental_maps = []

[dependencies]
allocator-api2.workspace = true
bumpalo.workspace = true
hashbrown.workspace = true
lazy_static.workspace = true
pest.workspace = true
pest_derive.workspace = true
static_assertions = "1.1.0"
serde = "1.0.228"
postcard = { version = "1.1.3", features = ["alloc"] }
smallvec = { version = "1.15.1", features = ["const_new", "union"] }

[build-dependencies]
pest_generator.workspace = true

[dev-dependencies]
once_cell.workspace = true
pretty_assertions.workspace = true
criterion = { version = "0.5", features = ["html_reports"] }
cel-interpreter = "0.10"
pprof = { version = "0.14", features = ["flamegraph", "criterion"] }

[[bench]]
name = "evaluator"
harness = false

[[bench]]
name = "type_manager"
harness = false

[[bench]]
name = "teeny_vec"
harness = false

[[bench]]
name = "function_dispatch"
harness = false

[[bench]]
name = "function_dispatch_simple"
harness = false

[lib]
proc-macro = false
