[package]
name = "melbi-lsp"
version.workspace = true
edition.workspace = true
authors.workspace = true

[dependencies]
melbi-core.workspace = true
melbi-fmt.workspace = true
tokio.workspace = true
pest.workspace = true
tower-lsp = "0.20.0"
tree-sitter = "0.25"
tree-sitter-melbi = { git = "https://github.com/NiltonVolpato/tree-sitter-melbi" }
bumpalo = "3.16.0"
dashmap = "6.1.0"
